RESOLVED FIXED165047
Fix exception scope verification failures in JSScope.cpp
https://bugs.webkit.org/show_bug.cgi?id=165047
Summary Fix exception scope verification failures in JSScope.cpp
Mark Lam
Reported 2016-11-23 09:45:04 PST
Patch coming.
Attachments
proposed patch. (2.52 KB, patch)
2016-11-23 09:49 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-23 09:49:52 PST
Created attachment 295371 [details] proposed patch.
Saam Barati
Comment 2 2016-11-28 14:13:51 PST
Comment on attachment 295371 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=295371&action=review > Source/JavaScriptCore/runtime/JSScope.cpp:-244 > - ASSERT_WITH_MESSAGE_UNUSED(throwScope, !throwScope.exception(), "When an exception occurs, the result of isUnscopable becomes false"); Why get rid of this?
Mark Lam
Comment 3 2016-11-28 15:12:29 PST
Comment on attachment 295371 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=295371&action=review >> Source/JavaScriptCore/runtime/JSScope.cpp:-244 >> - ASSERT_WITH_MESSAGE_UNUSED(throwScope, !throwScope.exception(), "When an exception occurs, the result of isUnscopable becomes false"); > > Why get rid of this? Because it is now redundant. The assertion before the "if (!unscopable)" check replaces it.
Mark Lam
Comment 4 2016-11-28 15:15:47 PST
Thanks for the review. Landed in r209028: <http://trac.webkit.org/r209028>.
Note You need to log in before you can comment on or make changes to this bug.