Fix exception scope verification failures in JSScope.cpp. https://bugs.webkit.org/show_bug.cgi?id=165047

Reviewed by Saam Barati.

* runtime/JSScope.cpp:
(JSC::JSScope::resolve):



Canonical link: https://commits.webkit.org/182733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209028 268f45cc-cd09-0410-ab3c-d52691b4dbfc